IMQ changelog:
--------------
2015-06-24
		Feng Gao removed usless skb_cb_store_lock of 4.0 patch. It will be merged into other patches if it is ok.
		Fixed malformed linux-3.2-imq.diff, linux-3.10-imq.diff, linux-3.12-imq.diff

2015-06-23
		Feng Gao fix one hang issue caused by IPv6 and shutdown interfaces before remove IMQ rule of IPv6

2015-06-20
		Feng Gao support for kernel 4.1

2015-06-19
		Feng Gao support for kernel 4.0 and fix the hang issue and crash issue by the performance enhancement.

2015-06-17
----------
		Feng Gao support for kernel 3.18 and 3.14;
		And make one enhancement for IMQ performance. It could enhance IMQ Performance about 20%.

2014-02-24
----------
		patch for kernel 3.13.x

2014-01-21
----------
		Please don't use patch from 3.11.x on 3.12.4+ Kernels because you will get a warning message in the logs:

		skbuff: IMQ: kfree_skb: skb->nf_queue_entry != NULL

2013-10-06
----------
		Jussi Kivilinna support kernel 3.11.x
2013-09-24
----------
		Support Kernel 3.9.10

2013-07-20
----------
	 	Support Kernel 3.9.1. It should work on 3.9.x also. 
2012/12/23:
-----------
		Support Kernel 3.7

2012/09/25:
-----------
		Minor change in net/netfilter/Makefile.
		Patch for 3.3.x also works for 3.4.x 
2012/03/19:
-----------
Jussi Kivilinna <jussi.kivilinna@mbnet.fi>:
               - Port to 3.3

2012/01/05:
-----------
Jussi Kivilinna <jussi.kivilinna@mbnet.fi>:
               - Port to 3.2

2011/11/04:
-----------
Jussi Kivilinna <jussi.kivilinna@mbnet.fi>:
               - Port to 3.1
               - Clean-up, move 'get imq device pointer by imqX name' to
                 separate function from imq_nf_queue().
 
2011/11/03:
-----------
Germano Michel <germanomichel@gmail.com>:
               - Fix IMQ for net namespaces
 
 
2011/08/16:
-----------
Jussi Kivilinna:
               - Clear IFF_TX_SKB_SHARING flag that was added for linux 3.0.2

2011/07/26:
-----------
Jussi Kivilinna: